--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     loadbalancer:
       ribbon:
         enabled: false
+  jmx:
+    enabled: false
 server:
   port: 8090
 
@@ -13,3 +15,4 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8080/eureka/
+
