--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -1,18 +1,21 @@
 spring:
   application:
-    name: eureka-client
-  profiles: eureka-client-profile
-  cloud:
-    loadbalancer:
-      ribbon:
-        enabled: false
-  jmx:
-    enabled: false
+    name: client
+
+
 server:
   port: 8090
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8080/eureka/ #왜 이 설정이 안먹지?
+      defaultZone: http://peer1:8081/eureka/,http://peer2:8082/eureka/,http://peer3:8083/eureka/
 
+#eureka:
+#  client:
+#    serviceUrl:
+#      defaultZone: http://peer1/eureka/,http://peer2/eureka/,http://peer3/eureka/
+
+logging:
+  level:
+    root: debug
