SpringBoot Admin 추가

--- a/eureka-client/src/main/resources/application.yml
+++ b/eureka-client/src/main/resources/application.yml
@@ -1,6 +1,19 @@
 spring:
   application:
     name: client
+  boot:
+    admin:
+      client:
+        enabled: true
+        url: http://localhost:8070
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"  #<2>
+  endpoint:
+    health:
+      show-details: ALWAYS
 
 
 server:
@@ -18,4 +31,5 @@ eureka:
 
 logging:
   level:
-    root: debug
+    root: info
+
