--- a/eureka-service/src/main/resources/application.yml
+++ b/eureka-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 eureka:
   client:
     serviceUrl:
-#      defaultZone: http://peer1:8081/eureka/,http://peer2:8082/eureka/,http://peer3:8083/eureka/
-      defaultZone: http://peer1:8081/eureka/
+      defaultZone: http://peer1:8081/eureka/,http://peer2:8082/eureka/,http://peer3:8083/eureka/
+#      defaultZone: http://peer1:8081/eureka/
 
 ---
 spring:
@@ -29,4 +29,13 @@ spring:
     name: peer3
 eureka:
   instance:
-    hostname: peer3®
+    hostname: peer3
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"  #<2>
+  endpoint:
+    health:
+      show-details: ALWAYS
