--- a/springboot-admin/pom.xml
+++ b/springboot-admin/pom.xml
@@ -10,34 +10,22 @@
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>me.kajundrama</groupId>
-  <artifactId>eureka-client</artifactId>
+  <artifactId>springboot-admin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>eureka-client</name>
-  <description>Eureka Client Example</description>
+  <name>springboot-admin</name>
+  <description>Demo project for Spring Boot</description>
 
   <properties>
     <java.version>1.8</java.version>
     <spring-boot-admin.version>2.2.1</spring-boot-admin.version>
-    <spring-cloud.version>Hoxton.SR1</spring-cloud.version>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-actuator</artifactId>
-    </dependency>
-    <dependency>
       <groupId>de.codecentric</groupId>
-      <artifactId>spring-boot-admin-starter-client</artifactId>
+      <artifactId>spring-boot-admin-starter-server</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -53,13 +41,6 @@
 
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>${spring-cloud.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
       <dependency>
         <groupId>de.codecentric</groupId>
         <artifactId>spring-boot-admin-dependencies</artifactId>
